--- a/ComponentesIphone/.project
+++ b/ComponentesIphone/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DesafioControleFluxo</name>
+	<name>ComponentesIphone</name>
 	<comment></comment>
 	<projects>
 	</projects>
